--- a/frontend/index.html
+++ b/frontend/index.html
@@ -20,7 +20,7 @@
         <input type="password" name="password" id="register_password">
     </p>
 
-    <input type="submit" value="Register">
+    <input type="submit" value="Register" name="btn">
 </form>
 </body>
 <script src="src/index.js"></script>
